
2004/05/02: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added new functions to GWEN_Time:
  - GWEN_Time_GetBrokenDownTime
  - GWEN_Time_GetBrokenDownDate
- fixed a bug in base/buffer (did not abort when mode
  GWEN_BUFFER_MODE_ABORT_ON_MEMFULL was given)


2004/05/01: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- io/bufferedio: 
  - added function GWEN_BufferedIO_ReadRawForced
- base/buffer:
  - added GWEN_Buffer_SetSourceBIO and a mechanism, which reads missing
    data from a GWEN_BUFFEREDIO (if the buffer is in mode 
    GWEN_BUFFER_MODE_ABORT_USE_BIO).


2004-04-28  Christian Stimming <stimming@tuhh.de>

	* gwenhywfar.m4: For automake-1.8, add extra quotation in the
	macro name.


2004-04-26  Christian Stimming <stimming@tuhh.de>

	* m4/acx_compile_warn.m4: For gcc3.4, add the new warning switch
	-Wdeclaration-after-statement in order to preserve source code
	compatibility with gcc2.95 and other compilers.


2004/04/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- renamed acx_windoze_paths.m4 to windoze.m4 thus overwriting the latter
  file, since it basically contains the stuff which is in windoze.m4 plus
  some minor additions.
  This should take care of some autotool complaints...


2004/04/24: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added base module "args" which transforms command line arguments to
  a GWEN_DB. It performs some checks on the arguments given and makes it
  easier to create help screens.
- debugged module "args" (it now works as intended)
- GWEN_Args_Usage() is now able to produce an ASCII help screen using
  GWEN_ARGS
- changed GWEN_ARGS so that it can now be used as const. All functions
  now accept "const GWEN_ARGS*" pointers.


2004-04-16  Christian Stimming <stimming@tuhh.de>

	* src/base/debug.c: Fix DBG_* functions that are the replacements